# ai-minerals

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SITE-ARCHITECTURE.md  VOICE-AND-STYLE.md  _quarto.yml  bear_cub.qmd  cross_region.qmd  drill_planning.qmd  goldbug.qmd  index.qmd  posts.qmd  pyproject.toml  regional.qmd  reproductions.qmd
data/derived/: README.md
data/ml/: ml_versions.json  prospectivity_placer_northern_sierra_250m_calibrated_4326.bands.json  prospectivity_placer_northern_sierra_250m_calibrated_4326.tif  prospectivity_placer_northern_sierra_250m_calibrated_4326_2band.meta.json  prospectivity_placer_northern_sierra_250m_coverage_mask_4326.meta.json  prospectivity_placer_northern_sierra_250m_coverage_mask_4326.tif
data/raw/: README.md
design/: mvp-proposal.md
docs/: monitoring.md  mvp-proposal.md
notebooks/: day3_model.ipynb  day3_model.qmd  day4_rf_shap.ipynb  day4_rf_shap.qmd  day5_validation.ipynb  day5_validation.qmd  eastak_porphyry_prospectivity.ipynb  eastak_porphyry_prospectivity.qmd  intro.ipynb  intro.qmd  tanacross.qmd
notebooks/arizona/: main.qmd
notebooks/bcgt/: baseline_model.ipynb  baseline_model.qmd  bcgt_porphyry_prospectivity.ipynb  bcgt_porphyry_prospectivity.qmd  data_exploration.ipynb  data_exploration.qmd  decision_planning.qmd  random_forest_and_shap.ipynb  random_forest_and_shap.qmd  validation.ipynb  validation.qmd
notebooks/bear_cub/: internal.ipynb  internal.qmd  main.ipynb  main.qmd  mining_review.qmd
notebooks/cross_region/: four_cell.qmd
notebooks/drill_planning/: bear_cub_gp_recommender.qmd  index.qmd
notebooks/eastak/: baseline_model.ipynb  baseline_model.qmd  data_exploration.ipynb  data_exploration.qmd  day3_model.ipynb  day4_rf_shap.ipynb  day4_rf_shap.qmd  day5_validation.ipynb  day5_validation.qmd  eastak_porphyry_prospectivity.ipynb  eastak_porphyry_prospectivity.qmd  intro.ipynb  random_forest_and_shap.ipynb  random_forest_and_shap.qmd  validation.ipynb  validation.qmd
notebooks/motherlode/: data_exploration_v3p1.ipynb  v3p1_improvements.ipynb  v3p1_improvements.qmd
notebooks/northern_sierra_placer/: internal.qmd
notebooks/prospectus/: bear_cub.qmd  motherlode.qmd  tanacross.qmd
portfolio/: _quarto.yml  _widget_v20_marker_animation.qmd  beacon.php  cross_region.qmd  custom.scss  drill_planning.qmd  index.qmd  placer.qmd  posts.qmd  references.qmd  regional.qmd  reproductions.qmd
portfolio/_includes/: beacon.html
scripts/: arizona_features.py  arizona_fetch_all.py  arizona_oof_comparison.py  bcgs_to_dh2loop.py  bcgt_dh2loop_extra_figures.py  bear_lodge_fetch_all.py  build_placer_2band.py  build_placer_bands_json.py  build_placer_coverage_mask.py  build_placer_sidecars.py  build_pomdpsol.sh  capture_goldbug_screenshot.py  deep_seam_cell_a_loo.py  deep_seam_cell_c_devnet_on_motherlode.py  deep_seam_replicate.py  deploy_internal.sh  deploy_to_hostinger.sh  fetch.py  fetch_gssurgo_ca.py  klamath_fetch_all.py  lawley_phase1_gbm.py  lawley_phase1b_leak_corrected.py  lawley_phase3_devnet.py  lawley_phase5_maper_starter.py  merge_s2_tiles.py  motherlode_deepseam_style_eval.py  motherlode_phase4b.py  motherlode_train_predict_250m.py  motherlode_v2_calibrate.py  motherlode_v2_postprocess_250m.py  motherlode_v2_rationale_only.py  motherlode_v2_shap.py  motherlode_v2_train_predict_250m.py  motherlode_v2_validity.py  motherlode_v3p1_a1_cleaned.py  motherlode_v3p1_groupA.py  motherlode_v3p1_groupB.py  motherlode_v3p1_groupCD.py  northern_sierra_placer_assemble_250m.py  northern_sierra_placer_audit_suite.sh  (+48 more)
scripts/arizona/: decompose_features.py  features.py  fetch_all.py
scripts/bcgt/: bcgs_thesaurus_pass.py  bedrock_plate.py  build_bcgs_overlay.py  build_v20_marker_widget.py  identify_b2_clusters.py  prepare_b2_inputs.py  v20_b0_mern_replication.py  v20_b1_benchmark.py  v20_b2_multi_subarea_benchmark.py  v20_b2_multi_subarea_chart.py  v20_b2_retrospective_benchmark.py  v20_belief_accuracy_chart.py  v20_c1_bernoulli_sweep.py  v20_c2_falsification_demo.py  v20_c2_real_falsification.py  v20_d1_benchmark.py  v20_d1_sensitivity.py  v20_d1_setup.py  v20_d1d_real_prior_benchmark.py  v20_d1d_setup.py  v20_marker_animation_data.py  v20_sarsop_marker_advantage.py  v20_sarsop_vs_pomcp.py
scripts/cross_region/: bear_lodge_fetch_all.py  us_carbonatite_ree_experiment.py
scripts/eastak/: path2_stage1a_features.py  path2_stage1bc_oof_kenorland.py  path2_stage2_features.py  path2_stage2bc_oof_kenorland.py  path5_decomposed_features.py  path5_oof_comparison.py
scripts/motherlode/: assemble_250m.py  cover_figures.py  path1_oof.py  phase2.py  phase3.py  phase5_transfer.py  prospectivity_figure_cleaned.py  rasterize_250m.py
scripts/northern_sierra_placer/: assemble_250m.py  audit_suite.sh  audit_usmin_motherlode.py  block_size_ablation.py  block_size_adjacency_diagnostic_figure.py  calaveras_transfer.py  calibrate_and_fuse.py  calibration_ablation.py  calibration_audit.py  fetch_all.py  fetch_osm_mining.py  fetch_osm_rivers.py  gaussian_vs_hard_cap_figure.py  leakage_risk_audit.py  lindgren_blind_set.py  maf_geochem_anomaly.py  north_south_split.py  phase1_index.py  phase1_score_map_figure.py  precompute_paleochannel.py  rationale_250m.py  relabel_motherlode.py  validation.py  (+6 more)
tests/: test_capture_rate.py  test_distance_downstream_leakage.py  test_gaussian_falloff.py  test_hawkes_cell_mask.py  test_label_kernels.py
tools/: bear_cub_3d_model.py  bear_cub_aerial_overlay.py  bear_cub_aggregate_ocr.py  bear_cub_apply_corrections.py  bear_cub_back_ocr.py  bear_cub_compare_jesse.py  bear_cub_corner_picker.py  bear_cub_dhmap_ocr.py  bear_cub_drillhole_picker.py  bear_cub_fix_empty_backs.py  bear_cub_full_log_ocr.py  bear_cub_full_reocr.py  bear_cub_generate_checklist.py  bear_cub_list_redistribution_diffs.py  bear_cub_list_review_issues.py  bear_cub_merge_v2.py  bear_cub_ocr_review.py  bear_cub_ocr_reviewer.py  bear_cub_pattern_analysis.py  bear_cub_predictive_model.py  bear_cub_relog_reocr.py  bear_cub_reocr_problem_holes.py  bear_cub_resource_analysis.py  bear_cub_suspect_reviewer.py  bear_cub_unified_comparison.py
(+205 files in other folders)
