[project]
name = "ai-minerals"
version = "0.1.0"
description = "Portfolio demo: open-data mineral prospectivity mapping with simple ML"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sky" }]

dependencies = [
  # Geospatial core
  "geopandas>=1.0",
  "shapely>=2.0",
  "fiona>=1.10",
  "rasterio>=1.4",
  "rioxarray>=0.17",
  "xarray>=2024.10",
  # STAC / cloud-native access (Microsoft Planetary Computer)
  "pystac-client>=0.8",
  "stackstac>=0.5",
  "planetary-computer>=1.0",
  # Geochemistry
  "pyrolite>=0.3",
  # ML
  "scikit-learn>=1.5",
  "imbalanced-learn>=0.12",
  "shap>=0.46",
  # Spatial CV
  # "spacv>=0.0.20",   # add when we wire it in
  # Viz
  "matplotlib>=3.9",
  "folium>=0.17",
  "contextily>=1.6",
  # Notebook
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "pyarrow>=24.0.0",
  "openpyxl>=3.1.5",
  "pypdfium2>=5.7.1",
  "anthropic>=0.97.0",
  "python-dotenv>=1.0",
  "streamlit>=1.39",
  # Click capture on Streamlit images (Bear Cub corner-picker tool)
  "streamlit-image-coordinates>=0.1.9",
  # 3D viz for Bear Cub placer subproject (drill collar + bedrock surface scenes)
  "pyvista[jupyter]>=0.44",
  "json-repair>=0.59.5",
  "pillow-heif>=1.3.0",
  "tabulate>=0.9",
  "pomdp-py>=1.3.5.1",
]

[project.optional-dependencies]
boost = ["xgboost>=2.1", "lightgbm>=4.5"]
dev = ["ruff>=0.7", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_minerals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = []
