[project]
name = "ai-minerals"
version = "0.1.0"
description = "Portfolio demo: open-data mineral prospectivity mapping with simple ML"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sky" }]

dependencies = [
  # Geospatial core
  "geopandas>=1.0",
  "shapely>=2.0",
  "fiona>=1.10",
  "rasterio>=1.4",
  "rioxarray>=0.17",
  "xarray>=2024.10",
  # STAC / cloud-native access (Microsoft Planetary Computer)
  "pystac-client>=0.8",
  "stackstac>=0.5",
  "planetary-computer>=1.0",
  # Geochemistry
  "pyrolite>=0.3",
  # ML
  "scikit-learn>=1.5",
  "imbalanced-learn>=0.12",
  "shap>=0.46",
  # Spatial CV
  # "spacv>=0.0.20",   # add when we wire it in
  # Viz
  "matplotlib>=3.9",
  "folium>=0.17",
  "contextily>=1.6",
  "seaborn>=0.13",
  # Notebook
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "pyarrow>=24.0.0",
  "openpyxl>=3.1.5",
  "pypdfium2>=5.7.1",
  "python-dotenv>=1.0",
  "json-repair>=0.59.5",
  "pillow-heif>=1.3.0",
  "tabulate>=0.9",
  "pomdp-py>=1.3.5.1",       # BCGT POMDP drill planning (Ch 6)
  "python-docx>=1.2.0",
  "torch>=2.11.0",           # DEEP-SEAM deviation-network port (model_devnet.py)
  "optuna>=4.8.0",           # hyperparameter search (model_weighted_pu.py)
  # Bear-Cub-only deps moved to the bearcub repo and dropped here:
  #   pyvista, gempy (+gempy-viewer), streamlit (+streamlit-image-coordinates),
  #   pypdf, anthropic. torch + optuna stay — ai-minerals' own models use them.
]

[project.optional-dependencies]
boost = ["xgboost>=2.1", "lightgbm>=4.5"]
dev = ["ruff>=0.7", "pytest>=8"]
# Normalizing flows for Masked Autoregressive Flow geochemical anomaly
# detection (Scheidt et al. 2024, DOI 10.1007/s11053-024-10409-2). Used by
# scripts/northern_sierra_placer_maf_geochem_anomaly.py + model_maf_anomaly.py.
flows = ["normflows>=1.7"]
# Loop3D implicit 3D structural modelling. LoopStructural consumes
# dh2loop-format Collar/Survey/Lithology CSVs (produced by
# scripts/bcgs_to_dh2loop.py) and renders a probabilistic 3D bedrock
# surface. Used by the BCGT Chapter 2 D.6.A enhancement (Joshi et al. 2021,
# DOI 10.5194/gmd-14-6711-2021).
loop3d = ["loopstructural>=1.6", "rapidfuzz>=3.9"]
# Phase 2/D paleochannel hydrology: bulky native deps used only by
# features/hydrology.py (Whitebox flow-routing), features/paleochannel.py
# (RiverREM + LRM + GMI composite), and the geomorphon terrace classifier
# (shells out to GRASS r.geomorphon, no pip dep).
paleochannel = [
    "whitebox-workflows>=1.3",
    # riverrem 0.0.1 is the current PyPI release (single-author package).
    # The paleochannel.py module gracefully falls back to LRM-only if the
    # import fails, so this is best-effort.
    "riverrem>=0.0.1",
    "scikit-image>=0.24",
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_minerals"]

[[tool.uv.index]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
torch = { index = "torch_cpu" }

[dependency-groups]
dev = []
